# tally

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cargo.yaml  ci.yaml  docker.yml  lint-build-test.yml  release.yaml  version-check.yaml
src/: database.rs  lib.rs  main.rs  models.rs  template.rs
tests/: cli.rs
