[package]
name = "tally-cli"
version = "1.0.0"
authors = ["Dylan Uhryniuk <duhry99@gmail.com>"]
license = "MIT"
repository = "https://github.com/uhryniuk/tally"
documentation = "https://docs.rs/tally"
description = "A persistent, inter-process counter for all your shell scripts"
keywords = ["cli"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
sqlite = "0.36.1"
prettytable-rs = "0.10.0"
regex = "1.11.0"
dirs = "5.0.1"

